fixed margins and prevented overflow on new post button

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -96,7 +96,6 @@
   .card__title {
     font-size: 16px;
     line-height: 100%;
-    margin: 12px 0 2px;
     white-space: nowrap;
   }
 
